[package]
name = "brb_node_snfs"
version = "1.0.4"
description = "a simple P2P node (CLI) for interactively using BRB"
authors = [ "dan-da@users.noreply.github.com", "David Rusu <davidrusu.me@gmail.com>" ]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/brb_node_snfs"
edition = "2018"
publish = false

[[bin]]
name = "brb_node_snfs"
path = "src/brb_node_snfs.rs"

[dependencies]
rand = "0.8.3"
serde = "1.0.123"
bincode = "1.3.1"
cmdr = "0.3.12"
log = "0.4.13"
env_logger = "0.8.2"
bytes = "1.0.1"
crdt_tree = "0.0.12"
#brb_dt_tree = "1.1.0"
brb_dt_tree = {git="https://github.com/dan-da/brb_dt_tree.git", branch="multi_op"}
sn_fs = {git="https://github.com/dan-da/sn_fs.git", branch="sn_fs_library_pr"}
fuse = "0.3.1"
openat = "0.1.19"
qp2p = "0.11.9"
brb = "1.0.7"
structopt = "0.3.21"


[dependencies.tokio]
version = "~1.2.0"
features = [ "full", "time" ]
